ajout vidéo de présentation

--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,16 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import os as os\n",
     "\n",
     "# Set visualisation style\n",
-    "sns.set(style='whitegrid')"
+    "sns.set(style='whitegrid')\n",
+    "os.makedirs('visualizations', exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +133,7 @@
        "4   26         0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -190,12 +192,14 @@
     "plt.title('Distribution of Fraud Cases')\n",
     "plt.xlabel('Is Fraud')\n",
     "plt.ylabel('Count')\n",
+    "output_path1 = '../visualizations/distribution_fraude.png'\n",
+    "plt.savefig(output_path1, dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +239,8 @@
     "mask = np.triu(np.ones_like(correlation_matrix, dtype=bool))\n",
     "sns.heatmap(correlation_matrix, annot=True, fmt='.2f', cmap='coolwarm', mask=mask, square=True)\n",
     "plt.title('Correlation Matrix (numeric features)')\n",
+    "output_path = '../visualizations/correlation_matrix.png'\n",
+    "plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -246,6 +252,13 @@
     "\n",
     "In this notebook, we performed exploratory data analysis on the fraud detection dataset. We examined the distribution of the target variable, checked for missing values, and visualized correlations between features. This analysis will guide us in the feature engineering and modeling phases."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
